k8s-rpi-apps-transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      volumes:
        - name: downloads-complete
          emptyDir: {}
        - name: downloads-incomplete
          emptyDir: {}
        - name: confdir
          emptyDir: {}
      containers:
        - name: k8s-rpi-transmission
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 700m
              memory: 128Mi        
          image: "ghcr.io/k8s-at-home/transmission:v3.00"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: downloads-complete
              mountPath: /downloads/complete
            - name: downloads-incomplete
              mountPath: /downloads/incomplete
            - name: confdir
              mountPath: /config
          ports:
            - name: tr-ui
              containerPort: 9091
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 30
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
        - name: transmission-sync-daemon
          image: quay.io/vadimzharov/podbackup:latest
          imagePullPolicy: Always
          command: ["podbackup"]
          args: ["sync-to-s3"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: downloads-complete
              mountPath: /data
