k8s-rpi-apps-transmission/service-transmission.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rpi-transmission
  namespace: transmission  
  labels:
    app.kubernetes.io/name: transmission
spec:
  type: ClusterIP
  ports:
  - port: 9091
    targetPort: tr-ui
    protocol: TCP
    name: tr-ui
  selector:
    app.kubernetes.io/name: transmission
