k8s-rpi-apps-transmission/04-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-ui
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/transmission"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<truihostname>`)
    kind: Rule
    services:
    - name: k8s-rpi-transmission
      port: 9091
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minidlna-ui
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/transmission"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<minidlnahostname>`)
    kind: Rule
    services:
    - name: minidlna-ui
      port: 8200
